// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and darwin 1`] = `
Object {
  "baudRate": 115200,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.3_115k2_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.3_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.3_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and darwin 1`] = `
Object {
  "baudRate": 115200,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_115k2_with_s132_3.1.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_1m_with_s132_3.1.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_1m_with_s132_3.1.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.3",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for darwin 1`] = `
Object {
  "baudRate": 115200,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_usb_for_s132_3.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 0.1.0+Aug-14-2018-15-12-51",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for linux 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_usb_for_s132_3.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 0.1.0+Aug-14-2018-15-12-51",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for win32 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.3_usb_for_s132_3.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/s132_nrf52_3.1.0_softdevice.hex",
  },
  "sdBleApiVersion": 3,
  "sdId": 145,
  "version": "ble-connectivity 0.1.0+Aug-14-2018-15-12-51",
}
`;
